--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "koa": "^2.15.3",
+    "koa-body": "^6.0.1",
     "koa-router": "^12.0.1",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
