--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
+    "koa-jwt": "^4.0.4",
     "koa-router": "^12.0.1",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
