--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     build:
       context: ./client/videos-app
     ports:
-      - "5000:5000"
+      - "${CLIENT_PORT}:${CLIENT_PORT}"
     volumes:
       - ./client/videos-app:/usr/src/app
       - client_node_modules:/usr/src/app/node_modules
