--- a/.env
+++ b/.env
@@ -2,11 +2,10 @@
 DATABASE_NAME=vd
 DATABASE_USER=postgres
 DATABASE_PASSWORD=nononopwd
-DATABASE_HOST=localhost
+DATABASE_HOST=db
 DATABASE_DIALECT=postgres
 
 PORT=3000
-CLIENT_PORT=3001
 
 JWT_SECRET=t22dkKls0d
 JWT_EXPIRED_TIME=30d
