--- a/client/videos-app/Dockerfile
+++ b/client/videos-app/Dockerfile
@@ -13,17 +13,8 @@ RUN npm install
 # 复制项目的所有文件到工作目录
 COPY . .
 
-# 构建 React 应用
-RUN npm run build
-
-# 安装 serve 包用于提供静态文件服务
-RUN npm install -g serve
-
-# 设置环境变量以指定 serve 的目录
-ENV SERVE_DIRECTORY=/usr/src/app/build
-
 # 暴露应用程序运行的端口
-EXPOSE 5000
+EXPOSE 3001
 
-# 使用 serve 提供静态文件服务
-CMD ["serve", "-s", "build", "-l", "5000"]
+# 启动 React 开发服务器
+CMD ["npm", "start"]
