--- a/client/videos-app/package.json
+++ b/client/videos-app/package.json
@@ -2,7 +2,7 @@
   "name": "videos-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://server:3000",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
