--- a/client/videos-app/package.json
+++ b/client/videos-app/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "sass": "^1.79.4",
